--- a/androidApp/app/src/main/res/values/colors.xml
+++ b/androidApp/app/src/main/res/values/colors.xml
@@ -10,4 +10,19 @@
     <color name="icons">#FFFFFF </color>
     <color name="divider">#BDBDBD </color>
     <color name="backgroundGrey">#D7DBDB</color>
+
+
+
+
+
+
+
+
+
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000000</color>
+
+
+
+
 </resources>
