schedule day list

--- a/androidApp/app/src/main/res/layout/content_home_screen.xml
+++ b/androidApp/app/src/main/res/layout/content_home_screen.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toTopOf="parent"></adapters.CalendarCustomView>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/scheduleList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="0dp"
