schedule day list

--- a/androidApp/app/src/main/res/values/colors.xml
+++ b/androidApp/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="icons">#FFFFFF </color>
     <color name="divider">#BDBDBD </color>
     <color name="backgroundGrey">#D7DBDB</color>
+    <color name="red">#FF0030</color>
 
 
 
