--- a/androidApp/app/src/main/res/layout/single_cell_layout.xml
+++ b/androidApp/app/src/main/res/layout/single_cell_layout.xml
@@ -3,9 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    >
     <TextView
         android:id="@+id/calendar_date_id"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
