--- a/androidApp/app/src/main/res/layout/schedule_list_layout.xml
+++ b/androidApp/app/src/main/res/layout/schedule_list_layout.xml
@@ -24,13 +24,43 @@
             android:elevation="10dp"
             card_view:cardCornerRadius="5dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
             <TextView
                 android:id="@+id/schedule_name"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:textSize="24sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Schedule name"/>
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+
+                        android:layout_margin="10dp"
+                        android:id="@+id/capacity_Ed"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Capacity:250"/>
+                    <TextView
+                        android:layout_marginRight="20dp"
+                        android:id="@+id/appointment_Ed"
+
+                        android:layout_marginTop="10dp"
+
+                        android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Appointments:250"/>
+
+                </RelativeLayout>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
     </RelativeLayout>
