schedule day list

--- a/androidApp/app/src/main/res/layout/app_bar_home_screen.xml
+++ b/androidApp/app/src/main/res/layout/app_bar_home_screen.xml
@@ -16,7 +16,25 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Today"
+                    android:layout_marginRight="5dp"
+                    android:textSize="24sp"
+                    android:id="@+id/todayText"
+                    android:layout_alignParentRight="true"
+
+                    />
+
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
