--- a/androidApp/app/src/main/res/layout/content_schedule_form.xml
+++ b/androidApp/app/src/main/res/layout/content_schedule_form.xml
@@ -23,7 +23,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
-        tools:layout_editor_absoluteY="8dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 
     <EditText
         android:id="@+id/edittext_name"
