--- a/androidApp/app/src/main/res/layout/schedule_list_layout.xml
+++ b/androidApp/app/src/main/res/layout/schedule_list_layout.xml
@@ -2,21 +2,21 @@
 
 
 
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
    >
-
-
     <android.support.v7.widget.CardView
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="16dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="9dp"
@@ -79,7 +79,7 @@
     </android.support.v7.widget.CardView>
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
 <!--
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
