--- a/androidApp/app/src/main/res/menu/activity_home_screen_drawer.xml
+++ b/androidApp/app/src/main/res/menu/activity_home_screen_drawer.xml
@@ -10,6 +10,11 @@
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_schedule"
             android:title="Schedule" />
+
+        <item
+            android:id="@+id/nav_patient"
+            android:icon="@drawable/ic_schedule"
+            android:title="Patient" />
        <!-- <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
