--- a/androidApp/app/src/main/res/layout/appointment_list_layout.xml
+++ b/androidApp/app/src/main/res/layout/appointment_list_layout.xml
@@ -35,47 +35,31 @@
                 android:textSize="24sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Schedule name"
+                android:text="Ali zohair"
                 android:layout_marginLeft="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="0dp" />
             <TextView
-                app:layout_constraintTop_toTopOf="parent"
-                android:padding="2dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:id="@+id/capacity_Ed"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/name"
+                android:id="@+id/number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Capacity:250"
-                tools:layout_editor_absoluteY="0dp"
-                tools:layout_editor_absoluteX="243dp" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="0dp" />
 
             <TextView
 
-                android:id="@+id/end_time"
+                android:id="@+id/token"
 
 
                 app:layout_constraintTop_toBottomOf="@+id/name"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="End Time: 14:00 am"/>
-
-
-            <TextView
-                app:layout_constraintTop_toBottomOf="@+id/name"
-                android:id="@+id/startTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Start Time: 14:00 am"
-
-                android:layout_marginTop="0dp"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintRight_toLeftOf="@+id/end_time"
-                android:layout_marginRight="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintHorizontal_bias="0.0" />
+                android:text="Appointments:250"/>
 
 
         </android.support.constraint.ConstraintLayout>
