--- a/androidApp/app/src/main/res/layout/schedule_list_layout.xml
+++ b/androidApp/app/src/main/res/layout/schedule_list_layout.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:id="@+id/schedule_name"
+                android:id="@+id/name"
                 android:textSize="24sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
                 android:layout_marginTop="0dp" />
             <TextView
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/schedule_name"
+                app:layout_constraintTop_toBottomOf="@+id/name"
                 android:id="@+id/capacity_Ed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
                 android:id="@+id/appointment_Ed"
 
 
-                app:layout_constraintTop_toBottomOf="@+id/schedule_name"
+                app:layout_constraintTop_toBottomOf="@+id/name"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
