--- a/androidApp/app/src/main/res/layout/content_add_member.xml
+++ b/androidApp/app/src/main/res/layout/content_add_member.xml
@@ -113,7 +113,7 @@
         android:padding="5dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -150,7 +150,7 @@
         android:padding="5dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
