--- a/androidApp/app/src/main/res/layout/content_schedule_form.xml
+++ b/androidApp/app/src/main/res/layout/content_schedule_form.xml
@@ -11,22 +11,24 @@
 
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="0dp"
-        android:layout_height="439dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+
+        app:layout_constraintBottom_toTopOf="@+id/footer"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/scrollView2"
+        app:layout_constraintVertical_bias="0.0">
 
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/updateBtn">
         <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+android:paddingBottom="15dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context="com.hass.ali.doctorsapp.ScheduleForm"
             tools:showIn="@layout/activity_schedule_form">
@@ -36,35 +38,35 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="Slot Name"
-                android:textColor="@color/colorPrimaryDark"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 android:layout_marginLeft="32dp"
                 android:layout_marginStart="32dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:text="Slot Name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/edittext_name"
                 style="@style/Widget.AppCompat.EditText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/edittext_with_state"
                 android:ems="10"
-                android:padding="5dp"
                 android:inputType="textPersonName"
+                android:padding="5dp"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <TextView
                 android:id="@+id/textview_time_from"
@@ -135,6 +137,7 @@
                 android:background="@drawable/edittext_with_state"
                 android:focusable="false"
                 android:padding="5dp"
+                android:layout_marginBottom="15dp"
                 android:textColor="@color/primary_text"
                 android:textSize="18sp"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -162,108 +165,108 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:text="Time To"
-                android:textColor="@color/colorPrimaryDark"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textview_time_from"
-                android:layout_marginLeft="32dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginStart="32dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textview_time_from" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="7dp"
                 android:text="Days"
-                android:textColor="@color/colorPrimaryDark"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textview_time_to"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textview_time_to" />
 
             <CheckBox
                 android:id="@+id/check_mon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:text="M"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                android:layout_marginStart="32dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <CheckBox
                 android:id="@+id/check_tue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="8dp"
                 android:text="T"
                 app:layout_constraintLeft_toRightOf="@+id/check_mon"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                android:layout_marginStart="5dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <CheckBox
                 android:id="@+id/check_wed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="8dp"
                 android:text="W"
                 app:layout_constraintLeft_toRightOf="@+id/check_tue"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                android:layout_marginStart="5dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <CheckBox
                 android:id="@+id/check_thu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="8dp"
                 android:text="T"
                 app:layout_constraintLeft_toRightOf="@+id/check_wed"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                android:layout_marginStart="5dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <CheckBox
                 android:id="@+id/check_fri"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="8dp"
                 android:text="F"
                 app:layout_constraintLeft_toRightOf="@+id/check_thu"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                android:layout_marginStart="5dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <CheckBox
                 android:id="@+id/check_sat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="8dp"
                 android:text="S"
                 app:layout_constraintLeft_toRightOf="@+id/check_fri"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                android:layout_marginStart="5dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <CheckBox
                 android:id="@+id/check_sun"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="8dp"
                 android:text="S"
                 app:layout_constraintLeft_toRightOf="@+id/check_sat"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                android:layout_marginStart="5dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <LinearLayout
                 android:id="@+id/divider"
@@ -281,56 +284,61 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:text="Capacity Per Day :"
-                android:textColor="@color/colorPrimaryDark"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/colorPrimaryDark"
+
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider"
-                android:layout_marginStart="32dp" />
+                app:layout_constraintTop_toBottomOf="@+id/divider" />
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:text="Start Date"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@color/colorPrimaryDark"
+
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView12"
-                android:layout_marginStart="32dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
                 android:text="End Date"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@color/colorPrimaryDark"
+
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView_startDate"
-                android:layout_marginStart="32dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView_startDate" />
 
             <EditText
                 android:id="@+id/capacity_Ed"
                 android:layout_width="0dp"
                 android:layout_height="34dp"
+                android:layout_marginEnd="32dp"
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/edittext_with_state"
                 android:ems="10"
                 android:inputType="number"
                 android:padding="5dp"
+
                 app:layout_constraintLeft_toRightOf="@+id/textView12"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/divider"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp" />
+
+                app:layout_constraintTop_toTopOf="@+id/divider" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -363,41 +371,52 @@
         app:layout_constraintVertical_bias="1.0" />
 -->
 
-    <Button
-        android:id="@+id/saveBtn"
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginStart="32dp"
-        android:visibility="gone"
-        android:background="@drawable/buttton"
-        android:elevation="10dp"
-        android:text="Save"
+        android:id="@+id/footer"
+
+     android:background="@color/backgroundGrey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/updateBtn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginStart="32dp"
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginStart="32dp"
 
-        android:background="@drawable/buttton"
-        android:elevation="10dp"
-        android:text="Update"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+            android:background="@drawable/buttton"
+            android:elevation="10dp"
+            android:text="Save"
+           />
+
+        <Button
+            android:id="@+id/updateBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginStart="32dp"
+          android:visibility="gone"
+            android:background="@drawable/buttton"
+            android:elevation="10dp"
+            android:text="Update"
+           />
+
+
+
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
