--- a/androidApp/app/src/main/res/layout/content_new_appoint.xml
+++ b/androidApp/app/src/main/res/layout/content_new_appoint.xml
@@ -47,7 +47,7 @@
         android:id="@+id/add_patient_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_menu_camera"
+        app:srcCompat="@android:drawable/ic_input_add"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="4dp"
